# pybibget

./: .gitignore  LICENSE  README.md  bibliography.bib  requirements.txt  setup.cfg  setup.py
.github/workflows/: pylint.yml
examples/: example.bib  example_biber.aux  example_biber.bbl  example_biber.bcf  example_biber.blg  example_biber.dvi  example_biber.fdb_latexmk  example_biber.fls  example_biber.run.xml  example_biber.tex  example_bibtex.aux  example_bibtex.bbl  example_bibtex.blg  example_bibtex.dvi  example_bibtex.fdb_latexmk  example_bibtex.fls  example_bibtex.tex  example_bibtex.xdv  pmid-mr-arxiv.dbx
pybibget/: __init__.py  bibentry.py
pybibget.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
pybibget/tests/: test.bib  test_bibget.py
