[metadata]
name = pybibget
version = 0.0.1

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    requests
    pybtex
    lxml
    pylatexenc
python_requires = >=3.6


[options.entry_points]
console_scripts =
    pybibget = pybibget:pybibget
    pybibparse = pybibget:pybibparse