[metadata]
name = pybibget
version = 0.1.0
author = Dominik Schröder
author_email = dschroeder@ethz.ch
url = https://github.com/wirhabenzeit/pybibget
description = Command line utility to automatically retrieve BibTeX citations from MathSciNet, arXiv, PubMed and doi.org
long_description = file: README.md
long_description_content_type = text/markdown
keywords = BibTeX, MathSciNet, PubMed, DOI, arXiv, bibliography, command-line, citation
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
zip_safe = True
include_package_data = True
install_requires =
    requests >= 2.28.1
    pybtex >= 0.24.0
    lxml >= 4.9.2
    pylatexenc >= 1.3
    aiolimiter >= 1.0.0
    appdirs >= 1.0.0
    httpx >= 0.21.0
python_requires = >=3.6

[options.entry_points]
console_scripts =
    pybibget = pybibget:pybibget
    pybibparse = pybibget:pybibparse
    pybibupdate = pybibget:pybibupdate
